2007-08-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keyfile.c:
   Group settings in load_dialog_prefs() by dialog tab.


2007-08-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c, src/callbacks.h, src/keybindings.c, src/main.c:
   Remove useless callback wrapper function.


2007-08-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, geany.glade:
   Add Prefs dialog 'Editor tabs' frame in Interface tab and group
   related preferences.
   Change some table spacing to multiples of 3.
   Rename Misc., Behaviour -> Miscellaneous.
 * src/plugindata.h:
   Clear PluginInfo fields in PLUGIN_INFO macro for future extensions.
 * src/keyfile.c:
   Group prefs in order for save_dialog_prefs().
 * src/keyfile.c:
   Refactor configuration_load().


2007-08-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * geany.glade, plugins/classbuilder.c, plugins/demoplugin.c,
   plugins/export.c, plugins/htmlchars.c, src/interface.c,
   src/keyfile.c, src/notebook.c, src/plugindata.c, src/prefs.c,
   src/prefs.h:
   Add version to plugin info fields and two other fields for future
   use.
   Add option to show/hide the small crosses on each file tab
   (closes #1757680).


2007-08-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/dialogs.c, src/callbacks.c:
   Fix saving the wrong document when using Save All with unnamed
   documents.
 * src/utils.c, src/highlighting.c, src/sciwrappers.c, src/document.c,
   src/symbols.c:
   Fix wrong brace formatting.
 * src/about.c, src/callbacks.c, src/keyfile.c, src/editor.c:
   Fix wrong // comment spacing.
 * src/keyfile.c:
   Refactor configuration_save() to group new struct settings together.
   Move 'Enable plugin support' keyfile pref to the 'geany' group.
 * src/prefs.c, src/prefs.h, src/plugindata.h, src/callbacks.c,
   src/keyfile.c, src/document.c, src/document.h, src/main.c,
   src/editor.h, src/ui_utils.c: