@@ -2152,6 +2152,33 @@ Next word part. Shift extends selection.        Ctrl+\\
 
 
 
+Hidden preferences
+==================
+
+There are some uncommon preferences that are not shown in the Preferences
+dialog. These can be set by using a different editor to edit
+``~/.geany/geany.conf`` when Geany is closed, or by using a different (or
+temporary) configuration directory for Geany. Otherwise, the configuration
+file changes are overwritten when Geany is closed.
+
+The table below refers to the key names in the configuration file, under the
+``[geany]`` group.
+
+==============================  ============================================  ==================
+Option                          Description                                   Default
+==============================  ============================================  ==================
+brace_match_ltgt                Whether to highlight <, > angle brackets.     false
+show_editor_scrollbars          Whether to display scrollbars when the        true
+                                editor window is bigger than the display.
+use_tab_to_indent               Whether pressing tab when a line is selected  true
+                                will indent the line.
+use_gtk_word_boundaries         Whether to look for the end of a word when    true
+                                using word-boundary related Scintilla
+                                commands (see `Scintilla keyboard
+                                commands`_).
+==============================  ============================================  ==================
+
+
 Compile-time options
 ====================
 
