@@ -2,6 +2,10 @@
 
  * src/keyfile.c:
    Group settings in load_dialog_prefs() by dialog tab.
+ * src/keyfile.c, src/document.c, src/editor.h, doc/geany.txt,
+   doc/geany.html:
+   Add hidden editor preference 'use_gtk_word_boundaries'.
+   Add docs appendix 'Hidden preferences'.
 
 
 2007-08-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
